# angular

./: README.md  WORKSPACE  browser-providers.conf.js  build.sh  protractor-perf.conf.js
goldens/public-api/core/: core.d.ts
integration/: _payload-limits.json  minify.js
integration/hello_world__cli/: .angular-cli.json  README.md  package.json
integration/hello_world__cli/src/: main.ts  tsconfig.app.json
integration/hello_world__cli/src/app/: app.component.css.shim.ngstyle.ts  app.module.ts  dom_plugin_renderer_factory.ts
integration/hello_world__closure/: closure.conf
integration/hello_world__closure/src/: app.ts
modules/benchmarks/e2e_test/: largetable_perf.ts  tree_perf.ts
modules/benchmarks/src/change_detection/: BUILD.bazel  application.ts  index.html  index.ts
modules/benchmarks/src/largetable/render3/: BUILD.bazel  index.html  index.ts  table.ts
modules/benchmarks/src/styling/ng2/: index.html  init.ts
scripts/github/: review-pr
tools/public_api_guard/common/: common.d.ts
tools/public_api_guard/core/: core.d.ts
tools/size-assertion/: BUILD.bazel  cli.ts  index.bzl  size_assertion.ts  size_assertion_spec.ts
tools/symbol-extractor/: symbol_extractor.ts  symbol_extractor_spec.ts
