package(default_visibility = ["//modules/benchmarks:__subpackages__"])

load("//tools:defaults.bzl", "ng_module", "ng_rollup_bundle")
load("@npm_bazel_typescript//:index.bzl", "ts_devserver")
load("//modules/benchmarks:benchmark_test.bzl", "benchmark_test")

ng_module(
    name = "application_lib",
    srcs = glob(["**/*.ts"], exclude=["**/*_spec.ts"]),
    deps = [
        "//packages:types",
        "//packages/common",
        "//packages/platform-browser",
        "//packages/core",
    ],
)

ng_module(
    name = "application_spec",
    srcs = glob(["**/*_spec.ts"]),
    deps = [
        "//packages:types",
        "//packages/common",
        "//packages/core",
        "@npm//reflect-metadata",
    ],
)

ng_rollup_bundle(
    name = "bundle",
    entry_point = "modules/benchmarks/src/change_detection/index.js",
    deps = [
        ":application_lib",
        "@npm//rxjs",
    ],
)

ts_devserver(
    name = "prodserver",
    static_files = [
        ":bundle.min_debug.js",
        ":bundle.min.js",
        "@npm//node_modules/zone.js:dist/zone.js",
        "index.html",
    ],
)

ts_devserver(
    name = "devserver",
    entry_module = "angular/modules/benchmarks/src/change_detection/index",
    index_html = "index.html",
    scripts = [
        "@npm//node_modules/tslib:tslib.js",
        "//tools/rxjs:rxjs_umd_modules",
    ],
    serving_path = "/index.js",
    static_files = [
        "@npm//node_modules/zone.js:dist/zone.js",
        "index.html",
    ],
    deps = [":application_lib"],
)

benchmark_test(
    name = "perf",
    server = ":prodserver",
    deps = [
        ":application_spec",
    ],
)
